Fix horizontal scroll and some margins

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,10 @@
 .header__logo {
-  height: 52px;
-  width: 176px;
+  /* height: 52px; */
+  max-width: 176px;
+}
+
+@media screen and (max-width: 767px) {
+  .header__logo {
+    width: 142px;
+  }
 }
