--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,5 +4,4 @@
   max-width: 1280px;
   width: 100%;
   box-sizing: border-box;
-  background-color: #2a2c2f;
 }
