--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,6 +5,6 @@
   letter-spacing: 2px;
   text-align: left;
   color: #aaa;
-  margin: 0;
+  margin: 0 0 12px 0;
   text-transform: uppercase;
 }
