--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,9 +1,10 @@
 .root {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   max-width: 1280px;
   min-width: 320px;
   margin: 0 auto;
   color: #ffffff;
   display: flex;
   justify-content: center;
+  background-color: #2a2c2f;
 }
